Fix diseño responsive

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 ml-1">
+                    <div class="col-md-4">
                         <div class="item">
                             <div class="img"> <img src="img/team/max_bilotti.jpg" alt=""> </div>
                             <div class="info">
@@ -121,13 +121,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 ml-auto mr-3">
-                        <p>Somos un estudio especializado en la realización y ejecución de proyectos de arquitectura interior, exterior, residencial y comercial.</p>
+                    <div class="col-md-6 ml-auto mr-3">
+                        <p class="float-md-right">Somos un estudio especializado en la realización y ejecución de proyectos de arquitectura interior, exterior, residencial y comercial.</p>
                         <h6 class="section-title2"><span>Estudios</span></h6>
-                        <ul class="list-unstyled pricing-card-list">
-                            <li><i class="fas fa-university"></i></i>Licenciatura en Diseño de Interiores - Universidad del Museo Social Argentino</li>
-                            <li><i class="fas fa-university"></i></i>Tecnicatura Superior en Espacios Verdes - Universidad del Museo Social Argentino</li>
-                            <li><i class="ti-medall"></i>Curso de Diseño de Espacios Interiores - Instituto Nacional de Servicios y Empresas / Universidad Tecnologica Nacional</li>
+                        <ul class="list-unstyled pricing-card-list float-md-right">
+                            <li class="mt-10"><i class="fas fa-university"></i></i>Licenciatura en Diseño de Interiores - Universidad del Museo Social Argentino</li>
+                            <li class="mt-10"><i class="fas fa-university"></i></i>Tecnicatura Superior en Espacios Verdes - Universidad del Museo Social Argentino</li>
+                            <li class="mt-10"><i class="ti-medall"></i>Curso de Diseño de Espacios Interiores - Instituto Nacional de Servicios y Empresas / Universidad Tecnologica Nacional</li>
                         </ul>
                     </div>
                 </div>
@@ -144,9 +144,9 @@
         <footer class="main-footer dark ">
             <div class="container ">
                 <div class="row ">
-                    <div class="col-md-4 mb-30 ">
-                        <div class="item fotcont justify-content-center " style="display: flex; ">
-                            <img src="img/logo_2.png " alt=" " style="width: 50%; ">
+                    <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
+                        <div class="about-img">
+                            <div class="img"> <img src="img/logo_2.png" class="img-fluid" alt=""> </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30 ">
