--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
                                 <div class="con">
                                     <span class="category">
-                                        <a href="blog.html">Diseño </a> -  20.12.2021
+                                        <a href="interior-design-blog.html">Diseño </a> -  20.12.2021
                                     </span>
                                     <h5><a href="post.html">Arquitectura</a></h5>
                                 </div>
@@ -278,7 +278,7 @@
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                        <a href="blog.html">Arte</a> - 18.12.2021
+                                        <a href="art-blog.html">Arte</a> - 18.12.2021
                                     </span>
                                     <h5><a href="post.html">La obra de arte</a></h5>
                                 </div>
@@ -286,7 +286,7 @@
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                        <a href="blog.html">Diseño</a> - 16.12.2021
+                                        <a href="interior-design-blog.html">Diseño</a> - 16.12.2021
                                     </span>
                                     <h5><a href="post.html">La arquitectura como comunicación</a></h5>
                                 </div>
@@ -294,7 +294,7 @@
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                    <a href="blog.html">Diseño</a> - 14.12.2021
+                                    <a href="interior-design-blog.html">Diseño</a> - 14.12.2021
                                 </span>
                                     <h5><a href="post.html">Visual merchandising</a></h5>
                                 </div>
@@ -317,9 +317,9 @@
         <footer class="main-footer dark">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 mb-30">
-                        <div class="item fotcont justify-content-center" style="display: flex;">
-                            <img src="img/logo_2.png" alt="" style="width: 50%;">
+                    <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
+                        <div class="about-img">
+                            <div class="img"> <img src="img/logo_2.png" class="img-fluid" alt=""> </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
