--- a/interior-design.html
+++ b/interior-design.html
@@ -179,9 +179,9 @@
         <footer class="main-footer dark">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 mb-30">
-                        <div class="item fotcont justify-content-center" style="display: flex;">
-                            <img src="img/logo_2.png" alt="" style="width: 50%;">
+                    <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
+                        <div class="about-img">
+                            <div class="img"> <img src="img/logo_2.png" class="img-fluid" alt=""> </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
