--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
                     <div class="col-md-6">
                         <h2 class="section-title">Nuestro <span>Blog</span></h2>
                     </div>
-                    <div class="col-3 ml-auto mr-0">
+                    <div class="col-md-3 ml-auto mr-0 animate-box" data-animate-effect="fadeInUp">
                         <h6 class="section-title2"><span style="font-size: 25px;">Ultimos Posteos</span></h6>
                     </div>
                 </div>
@@ -159,9 +159,9 @@
         <footer class="main-footer dark">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 mb-30">
-                        <div class="item fotcont justify-content-center" style="display: flex;">
-                            <img src="img/logo_2.png" alt="" style="width: 50%;">
+                    <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
+                        <div class="about-img">
+                            <div class="img"> <img src="img/logo_2.png" class="img-fluid" alt=""> </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
