--- a/3d-modelling.html
+++ b/3d-modelling.html
@@ -32,16 +32,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item dropdown"><a class="nav-link active" href="services.html">Servicios <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
-                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
-                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
-                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
-                            <li class="dropdown-item active"><a href="3d-modelling.html">Modelado 3D</a></li>
-                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
-                        </ul>
+                    <li class="nav-item"><a class="nav-link active" href="services.html">Servicios </a></li>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
                     <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
@@ -244,6 +235,18 @@
     <script src="js/jquery.magnific-popup.js"></script>
     <script src="js/YouTubePopUp.js"></script>
     <script src="js/custom.js"></script>
+
+    <script>
+        $('.dropdown').on('click', function(e) {
+            console.log(e.currentTarget.children[1]);
+            /*
+            if (e.currentTarget.children[1].is(":visible")) {
+                e.currentTarget.children[1].hide();
+            } else {
+                e.currentTarget.children[1].show();
+            }*/
+        });
+    </script>
 </body>
 
 </html>
