--- a/decor-plan.html
+++ b/decor-plan.html
@@ -32,16 +32,15 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item dropdown"><a class="nav-link active" href="services.html">Servicios <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
-                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
-                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
-                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
-                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
-                            <li class="dropdown-item active"><a href="decor-plan.html">Decor Plan</a></li>
-                        </ul>
+                    <li class="nav-item"><a class="nav-link active" href="services.html">Servicios </a></li>
+                    <ul class="dropdown-menu last">
+                        <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                        <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
+                        <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                        <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                        <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                        <li class="dropdown-item active"><a href="decor-plan.html">Decor Plan</a></li>
+                    </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
                     <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
