--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
-                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
-                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
-                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
-                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
-                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
-                        </ul>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Servicios </a></li>
+                    <ul class="dropdown-menu last">
+                        <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                        <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
+                        <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                        <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                        <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                        <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
+                        <hr style="margin-bottom: 5px;">
+                        <li class="dropdown-item"><a href="services.html">Ver Todos</a></li>
+                    </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
                     <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
@@ -54,7 +55,7 @@
                             <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" href="blog.html">Blog <i class="ti-angle-down"></i></a>
+                    <li class="nav-item dropdown"><a class="nav-link" href="blog.html" role="button" aria-haspopup="true" aria-expanded="false">Blog <i class="ti-angle-down"></i></a>
                         <ul class="dropdown-menu last">
                             <li class="dropdown-item"><a href="interior-design-blog.html">Diseño</a></li>
                             <li class="dropdown-item"><a href="art-blog.html">Arte</a></li>
@@ -367,6 +368,8 @@
             </div>
         </footer>
     </div>
+
+
     <!-- jQuery -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.0.min.js"></script>
@@ -381,6 +384,12 @@
     <script src="js/jquery.magnific-popup.js"></script>
     <script src="js/YouTubePopUp.js"></script>
     <script src="js/custom.js"></script>
+
+    <script>
+        $('.dropdown').on('click', function() {
+            console.log('hola');
+        });
+    </script>
 </body>
 
 </html>
