--- a/post.html
+++ b/post.html
@@ -32,17 +32,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
-                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
-                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
-                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
-                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
-                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
-                        </ul>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Servicios </a></li>
                     <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
                     <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
                         <ul class="dropdown-menu last">
@@ -50,7 +40,7 @@
                             <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
                             <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
                             <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
-                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a></li>
                             <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
                         </ul>
                     </li>
