Agregado parcial de Arte

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <a href="interior-design.html"> <img src="img/icons/icon-2.png" alt="">
                                 <h5>Interiorismo</h5>
                                 <div class="line"></div>
-                                <p>Nuestros proyectos de interiorismo reflejan la identidad del cliente, cubren expectativas y necesidades integrando funcionalidad, estetica y arte.</p>
+                                <p>Nuestros proyectos reflejan la identidad de cada cliente, que fusionando la estética, la funcionalidad y el arte, creamos experiencias únicas que brindan bienestar y confort.</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
@@ -248,7 +248,7 @@
                             <a href="art.html"> <img src="img/icons/arte_logo.png" style="margin-left: -10px;" alt="">
                                 <h5>Arte</h5>
                                 <div class="line"></div>
-                                <p>Comercializamos y realizamos expocisiones de arte de nuestra colección de obras de arte con una estetica minimalista y contemporánea.</p>
+                                <p>Comercializamos y realizamos exposiciones de nuestra colección de obras arte, con una estética minimalista y contemporánea.</p>
                                 <div class="numb">04</div>
                             </a>
                         </div>
