--- a/about.html
+++ b/about.html
@@ -116,13 +116,14 @@
                         <h6 class="section-title2"><span>Estudios</span></h6>
                         <ul class="list-unstyled pricing-card-list float-md-right">
                             <li class="mt-10"><i class="fas fa-university"></i></i>Licenciatura en Diseño de Interiores - Universidad del Museo Social Argentino</li>
-                            <li class="mt-10"><i class="fas fa-university"></i></i>Tecnicatura Superior en Espacios Verdes - Universidad del Museo Social Argentino</li>
+                            <li class="mt-10"><i class="fas fa-university"></i></i>Tecnicatura Superior en Diseño de Interiores y Espacios Verdes - Escuela Argentina del Diseño</li>
                             <li class="mt-10"><i class="ti-medall"></i>Curso de Diseño de Espacios Interiores - Instituto Nacional de Servicios y Empresas / Universidad Tecnologica Nacional</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Footer -->
         <div class="background bg-img bg-fixed section-padding pb-0 " data-background="img/1920x1128.jpg " data-overlay-dark="3 ">
             <div class="container ">
                 <div class="row justify-content-center ">
@@ -130,7 +131,6 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
         <footer class="main-footer dark ">
             <div class="container ">
                 <div class="row ">
